# server-tool-v2

./: Cargo.toml
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/server_tool/: Cargo.toml
crates/server_tool/src/: config.rs  lib.rs  manifest.rs  server.rs
crates/server_tool_gui/: Cargo.toml
crates/server_tool_gui/src/: main.rs
crates/server_tool_lib/: Cargo.toml
crates/server_tool_lib/src/: config.rs  manifest.rs  server.rs
src/: config.rs  main.rs
