[package]
name = "gui"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
eframe = "0.19.0"
futures = "0.3.25"
log = "0.4.17"
poll-promise = { version = "0.2.0", features = ["tokio"] }
pretty_env_logger = "0.4.0"
rfd = "0.10"
server_tool = {path= "../server_tool"}
tokio = { version = "1", features = ["macros"] }
