[package]
name = "server_tool"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
anyhow = "1.0.66"
dirs = "4.0.0"
eframe = "0.19.0"
futures = "0.3"
log = "0.4.17"
reqwest = "0.11.13"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.88"
serde_yaml = "0.9.14"
tokio = { version = "1", features = ["full"] }

