[package]
name = "server_tool_gui"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
eframe = "0.19.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
server_tool_lib = {path= "../server_tool_lib"}
